完成用户登录token创建验证
